# learn-open-gl-v2

./: CMakeLists.txt  README.md
src/: glad.c  main.cpp
src/glad/: glad.h
